# AiCoPhilosopher

./: .aicophilosopher_demo_history  .aicophilosopher_history  .gitignore  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: speckit.tasks.agent.md
.github/prompts/: speckit.constitution.prompt.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  create-new-feature.sh
.specify/specs/001-aicophilosopher/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/specs/002-console-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
data/traditions/: analytic_philosophy.json  buddhist_philosophy.json  confucian_ethics.json  continental_philosophy.json  daoist_philosophy.json  model_theory.json  philosophy_of_mathematics.json  philosophy_of_science.json  philosophy_of_technology.json  software_architecture.json
docs/: usage.md
docs/adr/: 0001-persistence-source-of-truth.md  0002-orchestration-handmade-coordinator.md  0003-llm-heuristic-offline-fallback.md  README.md
docs/init/: design.md  requirements.md  spec.md
prompts/nlu/: intent_classifier.md
scripts/: benchmark.py  check_domain_purity.py  demo_repl.py  smoke_test_repl.py
src/aicophilosopher/: __init__.py  __main__.py  container.py
tests/: conftest.py
tests/fixtures/: nlu_accuracy_test_set.json
tests/integration/: test_argument_review_synthesis.py  test_clarification_workflow.py  test_cross_traditional_synthesis.py  test_full_inquiry_cycle.py  test_literature_synthesis.py  test_repl_slash_commands.py  test_repl_us1_inquiry.py  test_session_persistence.py  test_session_resume.py
tests/regression/: test_known_bugs.py  test_workspace_env_unification.py
tests/unit/: test_argumentation.py  test_cli_commands.py  test_concept_analysis.py  test_coordinator_dialogue.py  test_coordinator_workstream_agents.py  test_critical_review.py  test_cross_traditional.py  test_literature_search.py  test_query_strategy.py  test_retry.py  test_synthesis.py
tests/verification/: test_constitution.py  test_offline_e2e.py
(+90 files in other folders)
