[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicophilosopher"
version = "0.1.0"
description = "AI Co-Philosopher: A stateful, hierarchical multi-agent workbench for philosophical research"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "AiCoPhilosopher Contributors" },
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]

dependencies = [
    "langgraph>=0.2.0",
    "pydantic>=2.7",
    "chromadb>=0.5.0",
    "rich>=13.0",
    "click>=8.0",
    "PyMuPDF>=1.24",
    "z3-solver>=4.13",
    "anthropic>=0.30",
    "google-generativeai>=0.8",
    "ollama>=0.4",
    "aiosqlite>=0.20",
    "httpx>=0.28",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "hypothesis>=6.100",
    "coverage>=7.5",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/2222-42/AiCoPhilosopher"

[project.scripts]
aicophilosopher = "aicophilosopher.presentation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aicophilosopher*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "C90", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
python_version = "3.11"
plugins = ["pydantic.mypy"]
exclude = [
    "tests/",
    "scripts/",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/aicophilosopher"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 0
show_missing = true
